--- a/chrome/locale/it-IT/overlay.properties
+++ b/chrome/locale/it-IT/overlay.properties
@@ -1,4 +1,1 @@
-helloMessage=Just let that saved search folder search in all folders!
-helloMessageTitle=Saved Search Them All!
-prefMessage=Int Pref Value: %d
-extensions.fastcc@micz.it.description=A Thunderbird extension that let you switch to cc: with a keyboard shortcut!
+extensions.fastcc@micz.it.description=Un'estensione di Thunderbird che ti fa passare da a: a cc: con la combinazione di tasti ALT+CTRL+C!
