--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,7 +1,8 @@
 -= FastCC Thunderbird Addon Release Notes =-
 
 ==========
-Version 1.1 - ??/??/2014
+Version 1.1 - ??/??/2015
+- pt-BR translation added (thanks to ouesten from Babelzilla.org).
 - 
 ==========
 Version 1.0.1 - 05/02/2012
